# gemini-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  gemini.rs  main.rs  models.rs
src/features/: bush_runner.rs  feature_trait.rs  mod.rs
