[package]
name = "gemini-cli"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.32"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
regex = "1.12.3"
